apply google maps and implement geolocator and listening changed location

--- a/TravelRecordApp/TravelRecordApp.iOS/Info.plist
+++ b/TravelRecordApp/TravelRecordApp.iOS/Info.plist
@@ -50,5 +50,7 @@
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
 	<string>TravelRecordApp</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>New Entry</string>
 </dict>
 </plist>
